# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: ci-pipeline.yml
ansible/: .env.j2  inventory.ini  playbook.yaml
todo_app/: app.py  item.py  trello_api.py
todo_app/authentication/: user.py
todo_app/data/: helpers.py  mongo_items.py  session_items.py  trello_items.py
todo_app/templates/: index.html
todo_app/tests/: StubResponse.py  test_integration.py  test_view_model.py
todo_app/view_models/: ViewModel.py
