[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.5"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
pytest = "^8.1.1"
selenium = "^4.18.1"
gunicorn = "^22.0.0"
pymongo = "^4.10.1"
flask-login = "^0.6.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mongomock = "^4.2.0.post1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
